made project standalone and eliminated need for backend

--- a/src/app/main-page/dialog-overview-example-dialog.html
+++ b/src/app/main-page/dialog-overview-example-dialog.html
@@ -2,11 +2,30 @@
 <!--<img *ngIf="qrCodeUrl"  [src]="qrCodeUrl" alt="QR Code">-->
 <mat-dialog-content>
   <!--  <p>What's your favorite imageUrl?</p>-->
-  <img id="myimage" [src]='imageUrl' />
+
+  <qrcode #parent (qrCodeURL)="onChangeURL($event)" [elementType]="elementType" [qrdata]='imageUrl' [width]="256" [errorCorrectionLevel]="'M'"></qrcode>
+<!--  <section>-->
+<!--    <div class="button-label">elementType:</div>-->
+<!--    <div class="button-row">-->
+<!--      <mat-button-toggle-group-->
+<!--        name="elementType"-->
+<!--        aria-label="Format (elementType)"-->
+<!--        [(ngModel)]="elementType"-->
+<!--        selected="elementType"-->
+<!--      >-->
+<!--        <mat-button-toggle value="canvas"-->
+<!--        >canvas (Default)</mat-button-toggle-->
+<!--        >-->
+<!--        <mat-button-toggle value="img">img</mat-button-toggle>-->
+<!--        <mat-button-toggle value="url">url</mat-button-toggle>-->
+<!--        <mat-button-toggle value="canvas">svg</mat-button-toggle>-->
+<!--      </mat-button-toggle-group>-->
+<!--    </div>-->
+<!--  </section>-->
 
 </mat-dialog-content>
 
 <mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="data.imageUrl" (click)="downloadImage()" cdkFocusInitial>Downlaod<mat-icon>download</mat-icon></button>
+  <button mat-button [mat-dialog-close]="data.imageUrl" (click)="saveAsImage(parent)" cdkFocusInitial>Downlaod<mat-icon>download</mat-icon></button>
 </mat-dialog-actions>
